[package]
name = "dayjs"
version = "0.1.1"
edition = "2021"
description = "dayjs api for rust"
authors = ["michaelbguo@tencent.com"]
license = "MIT"
repository = "https://github.com/guobin211/dayjs"
documentation = "https://docs.rs/dayjs"
keywords = ["date", "time", "day"]
categories = ["date-and-time"]

[dependencies]
chrono = "0.4.38"
lazy_static = "1.5.0"
regex = "1.11.0"
