[package]
name = "dayjs"
version = "0.2.2"
edition = "2024"
authors = ["michaelbguo@tencent.com"]
license = "MIT"
repository = "https://github.com/guobin211/dayjs"
documentation = "https://docs.rs/dayjs"
keywords = ["dayjs", "day", "moment", "date", "time"]
categories = ["date-and-time"]
description = "a date and time library for Rust, inspired by day.js"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0"
